fix start page alignment

--- a/src/pages/start/index.css
+++ b/src/pages/start/index.css
@@ -1,5 +1,5 @@
 .start-wrapper {
-    align-items: flex-start;
+    align-items: stretch;
     display: flex;
     height: auto;
     justify-content: space-between;
